# cs739-final-project

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeLists_app.cmake  CMakeLists_benchmark.cmake  CMakeLists_interface.cmake  CMakeLists_test.cmake  README.md  vcpkg.json
config/: 10_chubby.ini  10_node_cluster.ini  1_chubby.ini  1_node_cluster.ini  3_chubby.ini  3_node_cluster.ini  50_node_cluster.ini  5_chubby.ini  5_node_cluster.ini  cluster.json
documentation/: architecture.md  paxos-consensus.md  resources.md
examples/: CMakeLists.txt  logger.cc  logger.h  quick_start.cxx
examples/echo/: echo_server.cxx
include/: app.h  calc_state_machine.hxx  common.h  consensus.hxx  consensus_state_machine.hxx  debugger.hxx  in_memory_log_store.hxx  in_memory_state_mgr.hxx  library.h  log_store.hxx  rpc.h  state_machine.hxx  state_manager.hxx  struct.h  utility.h
results/: 10_node_read_debug.csv  10_node_read_optimized.csv  1_node_acquire_lock_optimized.csv  1_node_read_optimized.csv  1_node_start_session_debug.csv  5_node_read_optimized.csv  chart.xlsx
results/acquire/: 10_node_acquire_lock_debug.csv  10_node_acquire_lock_optimized.csv  1_node_acquire_lock_debug.csv  1_node_acquire_lock_optimized.csv  3_node_acquire_lock_debug.csv  3_node_acquire_lock_optimized.csv  5_node_acquire_lock_debug.csv  5_node_acquire_lock_optimized.csv
results/benchmark_set_leader/: 11_node.csv  13_node.csv  15_node.csv  1_node.csv  3_node.csv  5_node.csv  7_node.csv  9_node.csv  chart.xlsx
results/entire_process/: 10_node_entire_process_debug.csv  10_node_entire_process_optimized.csv  1_node_entire_process_debug.csv  1_node_entire_process_optimized.csv  3_node_entire_process_debug.csv  3_node_entire_process_optimized.csv  5_node_entire_process_debug.csv  5_node_entire_process_optimized.csv
results/read/: 1_node_read_debug.csv  3_node_read_debug.csv  3_node_read_optimized.csv  5_node_read_debug.csv
results/session/: 10_node_close_session_debug.csv  10_node_close_session_optimized.csv  10_node_start_session_debug.csv  10_node_start_session_optimized.csv  1_node_close_session_debug.csv  1_node_close_session_optimized.csv  1_node_start_session_optimized.csv  3_node_close_session_debug.csv  3_node_close_session_optimized.csv  3_node_start_session_debug.csv  3_node_start_session_optimized.csv  5_node_close_session_debug.csv  5_node_close_session_optimized.csv  5_node_start_session_debug.csv  5_node_start_session_optimized.csv
results/write/: 10_node_write_debug.csv  10_node_write_optimized.csv  1_node_write_debug.csv  1_node_write_optimized.csv  3_node_write_debug.csv  3_node_write_optimized.csv  5_node_write_debug.csv  5_node_write_optimized.csv
script/: build.sh  provision_local.sh  provision_remote.sh  run.sh  setenv.sh
src/: app.cc  client.cc  consensus.cc  consensus_interface.proto  database_interface.proto  declaration.h  entrypoint.cc  in_memory_log_store.cc  interface.proto  rpc.cc  utility.cc
src/consensus/: consensus.cc  debugger.cc  log_store.cc
src/header/: app.h  common.h  library.h  rpc.h  utility.h
src/misc/: utility.cc
test/: benchmark.cc  common.h  entrypoint.cc  interactive.cc  test.cc  test.h
